--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,18 +15,14 @@ services:
       - STATIC_URL=/static/
     ports:
       - "8000:8000"
-        command: >
+    command: >
       sh -c "find /app -name manage.py | xargs echo 'Found manage.py at: ' &&
              cd /app/mentor_link &&
              python manage.py collectstatic --noinput &&
              python manage.py migrate &&
-             daphne -b 0.0.0.0 -p 8000 main.asgi:application"
-    depends_on:
-      - redis
-    environment:
-      - USE_REDIS=1
-  db_volume:  # Volume pour assurer la persistance de la base de données SQLite
+             gunicorn --bind 0.0.0.0:8000 main.wsgi:application"
 
-  redis:
-    image: redis:7
-    restart: always
+volumes:
+  static_volume:
+  media_volume:
+  db_volume:  # Volume pour assurer la persistance de la base de données SQLite
