--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
              cd /app/mentor_link &&
              python manage.py collectstatic --noinput &&
              python manage.py migrate &&
-             gunicorn --bind 0.0.0.0:8000 main.wsgi:application"
+             daphne -b 0.0.0.0 -p 8000 mentor_link.asgi:application"
 
 volumes:
   static_volume:
