--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,52 +1,29 @@
-version: '3.8'
-
 services:
   web:
     build: .
     restart: always
     volumes:
+      - .:/app
       - static_volume:/app/static
       - media_volume:/app/media
-    depends_on:
-      - db
+      - db_volume:/app/db  # Volume pour stocker la base de données SQLite
     environment:
       - DEBUG=0
-      - SECRET_KEY=changeme
-      - DJANGO_ALLOWED_HOSTS=*
-      - DB_HOST=db
-      - DB_NAME=postgres
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-    expose:
-      - "8000"
-    command: >
-      sh -c "
-        cd /app/mentor_link &&
-        python manage.py collectstatic --noinput &&
-        python manage.py migrate &&
-        daphne -b 0.0.0.0 -p 8000 main.asgi:application
-      "
-
-  db:
-    image: postgres:15
-    restart: always
-    environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    volumes:
-      - db_data:/var/lib/postgresql/data
-
-  nginx:
-    image: nginx
+      - SECRET_KEY=change_this_to_a_secure_random_string
+      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+      - MEDIA_URL=/media/
+      - STATIC_URL=/static/
     ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - web
+      - "8000:8000"
+    command: >
+      sh -c "find /app -name manage.py | xargs echo 'Found manage.py at: ' &&
+             cd /app/mentor_link &&
+             python manage.py collectstatic --noinput &&
+             python manage.py migrate &&
+             daphne -b 0.0.0.0 -p 8000 main.asgi:application"
+
 
 volumes:
   static_volume:
   media_volume:
-  db_data:
+  db_volume:  # Volume pour assurer la persistance de la base de données SQLite
