--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,18 @@
+version: "3.9"
+
 services:
+  db:
+    image: postgres:16
+    restart: always
+    environment:
+      POSTGRES_DB: mentor_link
+      POSTGRES_USER: mentor_user
+      POSTGRES_PASSWORD: mentor_pass
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
   web:
     build: .
     restart: always
@@ -6,24 +20,25 @@ services:
       - .:/app
       - static_volume:/app/static
       - media_volume:/app/media
-      - db_volume:/app/db  # Volume pour stocker la base de données SQLite
     environment:
       - DEBUG=0
       - SECRET_KEY=change_this_to_a_secure_random_string
       - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
       - MEDIA_URL=/media/
       - STATIC_URL=/static/
+      - DATABASE_URL=postgres://mentor_user:mentor_pass@db:5432/mentor_link
+    depends_on:
+      - db
     ports:
       - "8000:8000"
     command: >
-      sh -c "find /app -name manage.py | xargs echo 'Found manage.py at: ' &&
-             cd /app/mentor_link &&
-             python manage.py collectstatic --noinput &&
-             python manage.py migrate &&
-             daphne -b 0.0.0.0 -p 8000 main.asgi:application"
-
+      sh -c "
+        python manage.py collectstatic --noinput &&
+        python manage.py migrate &&
+        daphne -b 0.0.0.0 -p 8000 main.asgi:application
+      "
 
 volumes:
+  pgdata:
   static_volume:
   media_volume:
-  db_volume:  # Volume pour assurer la persistance de la base de données SQLite
