--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,6 @@ services:
       - DATABASE_PASSWORD=mypassword
       - DATABASE_HOST=db
       - DATABASE_PORT=5432
-    ports:
-      - "8080:8080"
     command: >
       sh -c "cd /app/mentor_link &&
              python manage.py collectstatic --noinput &&
@@ -41,6 +39,20 @@ services:
              daphne -b 0.0.0.0 -p 8080 main.asgi:application"
     depends_on:
       - db
+    networks:
+      - backend
+
+  nginx:
+    image: nginx:alpine
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - static_volume:/var/www/static
+      - media_volume:/var/www/media
+    depends_on:
+      - web
     networks:
       - backend
 
