--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,79 @@
-events {}
+events {
+    worker_connections 1024;
+}
 
 http {
-    upstream django_servers {
-        server web:8000;
-        server web:8000;
-        server web:8000;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log warn;
+
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+    upstream django_app {
+        server web:8080;
     }
 
     server {
         listen 80;
+        server_name localhost;
+        client_max_body_size 100M;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $server_name;
+
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
 
         location / {
-            proxy_pass http://django_servers;
+            proxy_pass http://django_app;
+            proxy_redirect off;
+            proxy_buffering off;
+        }
+
+        location /static/ {
+            alias /var/www/static/;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Vary Accept-Encoding;
+        }
+
+        location /media/ {
+            alias /var/www/media/;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Vary Accept-Encoding;
+        }
+
+        location /ws/ {
+            proxy_pass http://django_app;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location ~ /\. {
+            deny all;
+        }
+
+        location ~* \.(log|conf)$ {
+            deny all;
         }
     }
 }
