ajout du testeur de charge pour validation autoscaling Django
Implémente un testeur de charge intelligent pour valider le comportement
d'autoscaling avec détection automatique des redémarrages NGINX.

Fonctionnalités:
- Détection intelligente des redémarrages NGINX (502/504, connexions fermées)
- Pause/reprise automatique pendant les interruptions de service
- Montée de charge progressive par paliers configurables
- Interface temps réel simplifiée (état, requêtes totales, taux de succès)
- Gestion robuste des erreurs avec timeouts configurables

Usage: python stress_test.py
Synchronisé avec auto_scale.py (CHECK_INTERVAL=30s, seuils CPU 40%/10%)

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,70 +1,74 @@
 events {
-  worker_connections 1024;
+    worker_connections 1024;
 }
 
 http {
-  include /etc/nginx/mime.types;
-  default_type application/octet-stream;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-  upstream django_app {
-    server web:8080 max_fails=3 fail_timeout=10s;
-    # Si plusieurs réplicas, Docker DNS les résout automatiquement (web_1, web_2, ...)
-  }
+    # Résolution DNS Docker interne, actualisée toutes les 10s
+    resolver 127.0.0.11 valid=10s;
 
-  server {
-    listen 80;
-    server_name _;
-
-    client_max_body_size 100M;
-
-    location / {
-      proxy_pass http://django_app;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_connect_timeout 60s;
-      proxy_send_timeout 60s;
-      proxy_read_timeout 60s;
-      proxy_buffering off;
+    upstream django_app {
+        # Nginx interroge le service "web" (tous les réplicas web_N)
+        server web:8080 max_fails=3 fail_timeout=10s;
+        # Avec Docker Compose, le nom "web" pointe vers tous les conteneurs web_N (jusqu'à 5)
     }
 
-    location /static/ {
-      alias /var/www/static/;
-      expires 1y;
-      add_header Cache-Control "public, immutable";
-      add_header Vary Accept-Encoding;
-    }
+    server {
+        listen 80;
+        server_name _;
 
-    location /media/ {
-      alias /var/www/media/;
-      expires 1y;
-      add_header Cache-Control "public, immutable";
-      add_header Vary Accept-Encoding;
-    }
+        client_max_body_size 100M;
 
-    # WebSocket support (si besoin)
-    location /ws/ {
-      proxy_pass http://django_app;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-      proxy_set_header Host $host;
-      proxy_cache_bypass $http_upgrade;
-    }
+        location / {
+            proxy_pass http://django_app;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+            proxy_buffering off;
+        }
 
-    # Healthcheck endpoint pour Nginx lui-même
-    location /health/ {
-      proxy_pass http://django_app/health/;
-      proxy_set_header Host $host;
-    }
+        location /static/ {
+            alias /var/www/static/;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Vary Accept-Encoding;
+        }
 
-    # Sécurité : interdiction d'accès aux fichiers sensibles
-    location ~ /\. {
-      deny all;
+        location /media/ {
+            alias /var/www/media/;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Vary Accept-Encoding;
+        }
+
+        # WebSocket support (si besoin)
+        location /ws/ {
+            proxy_pass http://django_app;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Healthcheck endpoint pour Nginx lui-même
+        location /health/ {
+            proxy_pass http://django_app/health/;
+            proxy_set_header Host $host;
+        }
+
+        # Sécurité : interdiction d'accès aux fichiers sensibles
+        location ~ /\. {
+            deny all;
+        }
+        location ~* \.(log|conf)$ {
+            deny all;
+        }
     }
-    location ~* \.(log|conf)$ {
-      deny all;
-    }
-  }
 }
